Fix overlap for trun.w.s.

--- a/src/components/CPU/Disasm.css
+++ b/src/components/CPU/Disasm.css
@@ -81,7 +81,7 @@
 	display: inline-block;
 	font-weight: bold;
 	vertical-align: top;
-	width: 10ex;
+	width: 12ex;
 }
 
 .DisasmLine__opcode::before {
